2002-11-20 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h and gdcmHeader.cxx gdcm no longer loads all the elements
        values, but limits itself to values which are below a user specified
        size (by default 1024 bytes).
      * python/gdcm.i : elements not loaded (because their size is above the
        user specified treshold) are exported with their TagKey as key of the
        python dictionary. This enables the testsuite to make some checks
        on the unloaded elements (since we have their offset and size).
      * python/testSuite.py
        - now tests for the existence and proper value of the pixel data
        - two new examples added.
      * Data/gdcm-MR-SIEMENS-16.acr[12] added.

2002-11-18 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h and gdcmHeader.cxx are now "Big Endian transfer syntax"
        aware. See the strategy comments in gdcmHeader::FindeLength().
      * Test/test.cxx now accepts a filename as first argument.
      * Data/US-PAL-8-10x-echo.dcm and US-RGB-8-epicard.dcm added.
      * python/testSuite.py changed to integrate test on above files.

2002-11-15 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Dicts/dicomV3.dic removed all the trailing (RET) when the
        the vr was also RET.
      * python/testSuite.py more tests added.

2002-11-14 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/testSuite.py unittest test suite added (uses Data)
      * Data/* dcm and acr files for the test suite.
      * glib dependance removed from un*x version. We now use ISO C99
        7.18 Integer types (see stdint.h)
        - python/Makefile, src/Makefile src/gdcm.h
      * src/ when an explicit vr (like dicom files) suddenly poped an
        implicit element we use to mark the underlying DictEntry of the
        concerned ElValue with "Implicit". This strategy was damageable
        too the public or provite dictionaries, since some of their vr